minor changes and branch creation

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <div id="big">
     <div id="acerca">ACERCA DE NOSOTROS</div>
     <div id="medium_left">
-        <img id="foto" src="foto1.jpg">
         <p>Israel Contreras Rodríguez | Ingeniero en Mecatrónica</p>
+        <p>Tecnológico de Monterrey</p>
+        <br>
+        <p>Arturo Montes de Oca Barrios | Ingeniero en tecnologías computacionales</p>
         <p>Tecnológico de Monterrey</p>
     </div>
 </div>
